--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
-DB_NAME=app
+ENV=development
 DB_USER=admin
 DB_PASSWORD=123
-
+DB_NAME=app
+DATABASE_URL=postgresql://admin:123@db/app
 CELERY_BROKER_URL=redis://redis:6379/0
 CELERY_RESULT_BACKEND=redis://redis:6379/0
